Basic menus and login. Created a menu drawer with some main pages, added action to FAB and fixed login with Google and email, working on Facebook login.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,18 @@
     tools:context="net.dambakk.drinkmaster.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+
+       
+
 </RelativeLayout>
