All menu items have corresponding pages and facebook login is working.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="net.dambakk.drinkmaster.MainActivity"
+    tools:context=".Activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
 
@@ -19,10 +19,7 @@
         android:layout_height="match_parent" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+
 
        
 
