--- a/app/src/main/res/layout/fragment_adventures.xml
+++ b/app/src/main/res/layout/fragment_adventures.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Adventures">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Activities.Adventures">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello, world!"/>
+        android:text="Hello, world! (From the Adventure view)"/>
 
     <ListView
         android:layout_width="fill_parent"
@@ -21,6 +19,14 @@ tools:context=".Adventures">
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_add_black_48dp"
+        android:tint="@color/white"/>
 
 
 
